--- a/css/03todoList.css
+++ b/css/03todoList.css
@@ -7,6 +7,7 @@ button {
     background-color: white;
     font-size: 30px;
     width: 100px;
+    border-radius: 5px;
     margin-bottom: 20px;
     margin-left: 10px;
     margin-right: 10px;
@@ -47,3 +48,4 @@ body {
 #category {
     text-align: center;
 }
+
