--- a/css/04calendar.css
+++ b/css/04calendar.css
@@ -42,6 +42,20 @@ body {
     border-left: 1px solid;
 }
 
+.day:nth-child(7n + 1),
+.date:nth-child(7n + 1) {
+  color: #D13E3E;
+}
+
+.day:nth-child(7n),
+.date:nth-child(7n) {
+  color: #396EE2;
+}
+
+.other{
+    opacity: .3;
+}
+
 #prevMonth,
 #nextMonth {
     background-color: white;
