--- a/css/04calendar.css
+++ b/css/04calendar.css
@@ -42,6 +42,10 @@ body {
     border-left: 1px solid;
 }
 
+.date:hover{
+    background-color: lightgray;
+}
+
 .day:nth-child(7n + 1),
 .date:nth-child(7n + 1) {
   color: #D13E3E;
