--- a/css/07caroucel.css
+++ b/css/07caroucel.css
@@ -1,21 +1,18 @@
 
 img{
-    width: 400px;
-    height: 200px;
-    
+    width: 100%;
+    height: 100%;
 }
 
 .imgs{
-    width: 400px;
+    width: 370px;
     height: 200px;
-    overflow: hidden;
     display: flex;
-    position: absolute;
-    top: 25%;
-    left: 35%;
-    transform: translate3d(0,0,0);
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
     transition: transform 0.2s;
 }
+
 
 button{
     width: 100px;
@@ -23,8 +20,6 @@ button{
     font-size: 50px;
     background-color: white;
     border: none;
-    position: absolute;
-    top: 35%;
 }
 
 button:hover{
