--- a/css/07caroucel.css
+++ b/css/07caroucel.css
@@ -17,6 +17,9 @@ body{
     transform: translate3d(0, 0, 0);
     transition: transform 0.2s;
 }
+.imgs > div > img {
+    height: 100%;
+}
 
 .content{
     overflow: hidden;
@@ -39,4 +42,12 @@ button:hover{
 .caroucel-wrapper {
     display: flex;
     align-items: center;
+}
+
+.banner-text{
+    position: absolute;
+    font-size: 40px;
+    color: white;
+    width: 100%;
+
 }
